# pre-commit-cairo

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
pre_commit_cairo/: check_format.py  check_lint.py
tests/: test_pre_commit_cairo.py
