[tool.poetry]
name = "pre-commit-cairo"
version = "0.0.11"
description = ""
authors = ["franalgaba <f.algaba@outlook.es>"]

[tool.poetry.dependencies]
python = "^3.7"
rich = "^12.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.3.0", allow-prereleases = true}

[tool.poetry.scripts]
check-lint = 'pre_commit_cairo.check_lint:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
